primeira migration e configurando banco de dados

--- a/showcase-api/appsettings.json
+++ b/showcase-api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MinhaConexao": "Persist Security Info=True;Host=localhost;Port=5432;Username=postgres;Password=admin;Database=ShinyShowcase;Command Timeout=3000"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
